--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 streamlit>=1.27.0
-llama-index>=0.9.0
+llama-index[nvidia]>=0.9.0
 llama-parse>=0.3.0
 openai>=1.10.0
 python-dotenv>=1.0.0
-nest-asyncio>=1.5.8 
+nest-asyncio>=1.5.8
