--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,6 @@
 streamlit==1.32.0
-llama-index-core==0.10.24
-llama-index-embeddings-nvidia==0.1.3
-llama-index-llms-openai==0.1.17
-llama-index-llms-nvidia==0.1.4
-nest-asyncio==1.5.8
-python-dotenv==1.0.0
-llama-parse==0.3.5
+llama-index>=0.11.16,<0.13.0
+openai>=1.10.0
+python-dotenv>=1.0.0
+nest-asyncio>=1.5.8
+llama-parse>=0.3.5
