--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-streamlit==1.32.0
-llama-index>=0.11.16,<0.13.0
+streamlit==1.44.1
+llama-index>=0.12.32,<0.14.0
+llama-index-embeddings-nvidia>=0.1.3
+llama-index-llms-nvidia>=0.1.4
 openai>=1.10.0
 python-dotenv>=1.0.0
 nest-asyncio>=1.5.8
